cmake_minimum_required(VERSION 3.19)
project(10-qt-cin LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core)

qt_standard_project_setup()

qt_add_executable(10-qt-cin
    main.cpp
)

target_link_libraries(10-qt-cin
    PRIVATE
        Qt::Core
)

include(GNUInstallDirs)

install(TARGETS 10-qt-cin
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
