cmake_minimum_required(VERSION 3.19)
project(12-qt-qdebug LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core)

qt_standard_project_setup()

qt_add_executable(12-qt-qdebug
    main.cpp
)

target_link_libraries(12-qt-qdebug
    PRIVATE
        Qt::Core
)

include(GNUInstallDirs)

install(TARGETS 12-qt-qdebug
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
