cmake_minimum_required(VERSION 3.19)
project(8-qt-operators LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core)

qt_standard_project_setup()

qt_add_executable(8-qt-operators
    main.cpp
)

target_link_libraries(8-qt-operators
    PRIVATE
        Qt::Core
)

include(GNUInstallDirs)

install(TARGETS 8-qt-operators
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)
